Fixed the size and alignment of a few elements, added the profile card

--- a/Visuals/style.css
+++ b/Visuals/style.css
@@ -367,7 +367,6 @@ span:focus {
     position: relative;
     padding: 10px;
     z-index: 150;
-    height: 100px;
     display: table;
 }
 
@@ -441,42 +440,94 @@ span:focus {
 }
 
 #memberImg {
-    height: 36px;
-    width: 36px;
+    height: 32px;
+    width: 32px;
     border-radius: 50px;
     background-color: #cccccc;
     position: relative;
 }
 
 #memberStatusOnline {
-    height: 11px;
-    width: 11px;
+    height: 10px;
+    width: 10px;
     border-radius: 50px;
     background-color: #389C58;
     position: absolute;
-    bottom: -1px;
-    right: -1px;
-    border: 3px solid #2F3136;
+    bottom: -2px;
+    right: -2px;
+    border: 2px solid #2F3136;
 }
 
 #memberStatusIdle {
-    height: 11px;
-    width: 11px;
+    height: 10px;
+    width: 10px;
     border-radius: 50px;
     background-color: #FAA81A;
     position: absolute;
-    bottom: -1px;
-    right: -1px;
-    border: 3px solid #2F3136;
+    bottom: -2px;
+    right: -2px;
+    border: 2px solid #2F3136;
 }
 
 #memberStatusDnd {
-    height: 11px;
-    width: 11px;
+    height: 10px;
+    width: 10px;
     border-radius: 50px;
     background-color: #E94144;
     position: absolute;
-    bottom: -1px;
-    right: -1px;
-    border: 3px solid #2F3136;
+    bottom: -2px;
+    right: -2px;
+    border: 2px solid #2F3136;
+}
+
+#userCard {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% - 10px);
+    background-color: #292B2F;
+    height: 52px;
+}
+
+#userCard p {
+    margin: 0;
+}
+
+#userImg {
+    width: 32px;
+    height: 32px;
+    background-color: #cccccc;
+    border-radius: 50px;
+    position: relative;
+    bottom: -16px;
+}
+
+#userNick {
+    padding-left: 10px;
+    position: relative;
+    top: 12px;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+#userTag {
+    position: relative;
+    left: 40px;
+    font-size: 12px;
+    color: #cccccc;
+}
+
+#userStatusOnline {
+    height: 10px;
+    width: 10px;
+    border-radius: 50px;
+    background-color: #389C58;
+    position: absolute;
+    bottom: -2px;
+    right: -2px;
+    border: 2px solid #292B2F;
 }
